--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@ a:link
 {
     text-decoration: none;
 
-    color: #526d7a;
+    color: #966;
 }
 body
 {
@@ -137,6 +137,8 @@ div.content
 {
     margin-top: 10px;
     margin-bottom: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 .intro
 {
@@ -228,6 +230,7 @@ section.meta {
 .social a
 {
     color: #526d7a;
+    padding: 5px;
 }
 .title
 {
